--- a/supermarket-sales-analysis.ipynb
+++ b/supermarket-sales-analysis.ipynb
@@ -47,7 +47,7 @@
    },
    "source": [
     "# load dataset from local file\n",
-    "data = pd.read_csv('C:/Users/denis/PycharmProjects/scientificProject/data/supermarket_sales.csv')"
+    "data = pd.read_csv('path to file /data/supermarket_sales.csv')"
    ],
    "outputs": [],
    "execution_count": 91
